--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,7 +5,11 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
+  padding: 0;
+  overflow-x: hidden; 
 }
 article,
 aside,
